--- a/qsi-carelogic-order-domain-services.properties
+++ b/qsi-carelogic-order-domain-services.properties
@@ -1,7 +1,7 @@
 http.countries.api=http://restcountries.eu/rest/v1
 api.countries.services.all=${http.countries.api}/all
 api.countries.services.calling.code=${http.countries.api}/callingcode/{countryId}
-api.countries.services.codes=${http.countries.api}
+api.countries.services.codes=${http.countries.api}/alpha?codes={countriesCodes}
 api.countries.services.name.full.text=${http.countries.api}/name/{countryName}?fullText=true
 api.countries.services.code=${http.countries.api}/alpha/{countryCode}
 api.countries.services.capital.city=${http.countries.api}/capital/{cityName}
