--- a/qsi-carelogic-order-domain-services.properties
+++ b/qsi-carelogic-order-domain-services.properties
@@ -5,5 +5,5 @@ api.countries.services.codes=${http.countries.api}/alpha?codes={countriesCodes}
 api.countries.services.name.full.text=${http.countries.api}/name/{countryName}?fullText=true
 api.countries.services.code=${http.countries.api}/alpha/{countryCode}
 api.countries.services.capital.city=${http.countries.api}/capital/{cityName}
-api.countries.services.region=${http.countries.api}/region/{countryName}
+api.countries.services.region=${http.countries.api}/region/{regionName}
 api.countries.services.sub.region=${http.countries.api}/subregion/{countryName}
