--- a/qsi-carelogic-order-domain-services.properties
+++ b/qsi-carelogic-order-domain-services.properties
@@ -6,4 +6,4 @@ api.countries.services.name.full.text=${http.countries.api}/name/{countryName}?f
 api.countries.services.code=${http.countries.api}/alpha/{countryCode}
 api.countries.services.capital.city=${http.countries.api}/capital/{cityName}
 api.countries.services.region=${http.countries.api}/region/{regionName}
-api.countries.services.sub.region=${http.countries.api}/subregion/{countryName}
+api.countries.services.sub.region=${http.countries.api}/subregion/{subRegionName}
