--- a/qsi-carelogic-proxy-zuul.properties
+++ b/qsi-carelogic-proxy-zuul.properties
@@ -1,2 +1,4 @@
-zuul.routes.qsi-carelogic-order-domain-services.path=/qsi-carelogic-order-domain-services/**
-zuul.routes.qsi-carelogic-order-domain-services.url=http://localhost:8081
+zuul.routes.orderApi.path=/qsiOrderApi/**
+zuul.routes.orderApi.url=http://localhost:8081
+zuul.routes.orderApi.path=/qsiPatientApi/**
+zuul.routes.orderApi.url=http://localhost:8082
