--- a/qsi-carelogic-proxy-zuul.properties
+++ b/qsi-carelogic-proxy-zuul.properties
@@ -1,4 +1,4 @@
 zuul.routes.orderApi.path=/qsiOrderApi/**
 zuul.routes.orderApi.url=http://localhost:8081
-zuul.routes.orderApi.path=/qsiPatientApi/**
-zuul.routes.orderApi.url=http://localhost:8082
+zuul.routes.patientApi.path=/qsiPatientApi/**
+zuul.routes.patientApi.url=http://localhost:8082
