--- a/gatewayApi.properties
+++ b/gatewayApi.properties
@@ -2,11 +2,10 @@ http.url.zuul=http://localhost:8181
 http.order.api.url=${http.url.zuul}/qsiOrderApi
 http.patient.api.url=${http.url.zuul}/qsiPatientApi
 api.order.api.all=${http.order.api.url}/all
-api.patient.api.calling.code=${http.countries.api}/callingcode/{countryId}
-api.patient.api.codes=${http.countries.api}/alpha?codes={countriesCodes}
-api.patient.api.name.full.text=${http.countries.api}/name/{countryName}?fullText=true
-api.patient.api.code=${http.countries.api}/alpha/{countryCode}
-api.patient.api.capital.city=${http.countries.api}/capital/{cityName}
-api.patient.api.region=${http.countries.api}/region/{regionName}
-api.patient.api.sub.region=${http.countries.api}/subregion/{subRegionName}
-
+api.patient.api.calling.code=${http.patient.api.url}/callingcode/{countryId}
+api.patient.api.codes=${http.patient.api.url}/alpha?codes={countriesCodes}
+api.patient.api.name.full.text=${http.patient.api.url}/name/{countryName}?fullText=true
+api.patient.api.code=${http.patient.api.url}/alpha/{countryCode}
+api.patient.api.capital.city=${http.patient.api.url}/capital/{cityName}
+api.patient.api.region=${http.patient.api.url}/region/{regionName}
+api.patient.api.sub.region=${http.patient.api.url}/subregion/{subRegionName}
