--- a/gatewayApi.properties
+++ b/gatewayApi.properties
@@ -1,11 +1,11 @@
 http.url.zuul=http://localhost:8181
 http.order.api.url=${http.url.zuul}/qsiOrderApi
 http.patient.api.url=${http.url.zuul}/qsiPatientApi
-api.order.api.all=${http.order.api.url}/all
-api.patient.api.calling.code=${http.patient.api.url}/callingcode/{countryId}
-api.patient.api.codes=${http.patient.api.url}/alpha?codes={countriesCodes}
-api.patient.api.name.full.text=${http.patient.api.url}/name/{countryName}?fullText=true
-api.patient.api.code=${http.patient.api.url}/alpha/{countryCode}
-api.patient.api.capital.city=${http.patient.api.url}/capital/{cityName}
-api.patient.api.region=${http.patient.api.url}/region/{regionName}
-api.patient.api.sub.region=${http.patient.api.url}/subregion/{subRegionName}
+api.order.api.all=${http.order.api.url}/api/v1/countries
+api.patient.api.calling.code=${http.patient.api.url}/api/v1/country/{countryId}
+api.patient.api.codes=${http.patient.api.url}/api/v1/countriesCodes/{countriesCodes}
+api.patient.api.name.full.text=${http.patient.api.url}/api/v1/countryName/{countryName}
+api.patient.api.code=${http.patient.api.url}/api/v1/countryCode/{countryCode}
+api.patient.api.capital.city=${http.patient.api.url}/api/v1/capitalCity/{cityName}
+api.patient.api.region=${http.patient.api.url}/api/v1/countryRegion/{regionName}
+api.patient.api.sub.region=${http.patient.api.url}/api/v1/countrySubRegion/{subRegionName}
