--- a/gatewayApi.properties
+++ b/gatewayApi.properties
@@ -2,7 +2,7 @@ http.url.zuul=http://localhost:8181
 http.order.api.url=${http.url.zuul}/qsiOrderApi
 http.patient.api.url=${http.url.zuul}/qsiPatientApi
 api.order.api.all=${http.order.api.url}/api/v1/countries
-api.patient.api.calling.code=${http.patient.api.url}/api/v1/country/{countryId}
+api.patient.api.calling.code=${http.patient.api.url}/api/v1/callingCode/{countryId}
 api.patient.api.codes=${http.patient.api.url}/api/v1/countriesCodes/{countriesCodes}
 api.patient.api.name.full.text=${http.patient.api.url}/api/v1/countryName/{countryName}
 api.patient.api.code=${http.patient.api.url}/api/v1/countryCode/{countryCode}
