--- a/gatewayApi.properties
+++ b/gatewayApi.properties
@@ -1,3 +1,5 @@
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+
 http.url.zuul=http://localhost:8181
 http.order.api.url=${http.url.zuul}/qsiOrderApi
 http.patient.api.url=${http.url.zuul}/qsiPatientApi
@@ -9,3 +11,4 @@ api.patient.api.code=${http.patient.api.url}/api/v1/countryCode/{countryCode}
 api.patient.api.capital.city=${http.patient.api.url}/api/v1/capitalCity/{cityName}
 api.patient.api.region=${http.patient.api.url}/api/v1/countryRegion/{regionName}
 api.patient.api.sub.region=${http.patient.api.url}/api/v1/countrySubRegion/{subRegionName}
+
