--- a/orderApi.properties
+++ b/orderApi.properties
@@ -1,2 +1,4 @@
 http.countries.api=http://restcountries.eu/rest/v1
 api.countries.services.all=${http.countries.api}/all
+custom.sleep.order.domain.key=custom.sleep.order.domain.value
+custom.sleep.order.domain.value=100
