--- a/patientApi.properties
+++ b/patientApi.properties
@@ -7,3 +7,5 @@ api.countries.services.code=${http.countries.api}/alpha/{countryCode}
 api.countries.services.capital.city=${http.countries.api}/capital/{cityName}
 api.countries.services.region=${http.countries.api}/region/{regionName}
 api.countries.services.sub.region=${http.countries.api}/subregion/{subRegionName}
+custom.sleep.patient.domain.key=custom.sleep.order.domain.value
+custom.sleep.patient.domain.value=100
