--- a/gatewayApi.properties
+++ b/gatewayApi.properties
@@ -12,3 +12,18 @@ api.patient.api.capital.city=${http.patient.api.url}/api/v1/capitalCity/{cityNam
 api.patient.api.region=${http.patient.api.url}/api/v1/countryRegion/{regionName}
 api.patient.api.sub.region=${http.patient.api.url}/api/v1/countrySubRegion/{subRegionName}
 
+api.patient.get.information=${http.patient.api.url}/api/patients/information?orgId={orgId}
+api.patient.get.patient.by.id=${http.patient.api.url}/api/patients/{patientId};
+api.order.get.orders.by.patientId=${http.order.api.url}/api/orders/last/{patientId};
+
+hystrix.threadpool.default.coreSize=hystrix.threadpool.default.coreSize
+hystrix.threadpool.default.maxQueueSize=hystrix.threadpool.default.maxQueueSize
+hystrix.threadpool.default.queueSizeRejectionThreshold=hystrix.threadpool.default.queueSizeRejectionThreshold
+hystrix.collapser.default.timerDelayInMilliseconds=hystrix.collapser.default.timerDelayInMilliseconds
+hystrix.collapser.default.maxRequestsInBatch=hystrix.collapser.default.maxRequestsInBatch
+
+hystrix.collapser.key.patient.v2=PatientCollapserKeyAllV2
+hystrix.command.group.key.patient.v2.all=PatientGroupAllV2
+hystrix.command.group.key.patient.v2.orgId=PatientByOrgIdGroupV2
+hystrix.thread.pool.key.patient.v2=PatientThreadPoolV2
+
