--- a/gatewayApi.properties
+++ b/gatewayApi.properties
@@ -16,7 +16,7 @@ api.patient.get.information=${http.patient.api.url}/api/patients/information?org
 api.patient.get.patient.by.id=${http.patient.api.url}/api/patients/{patientId};
 api.order.get.orders.by.patientId=${http.order.api.url}/api/orders/last/{patientId};
 
-hystrix.threadpool.default.coreSize=hystrix.threadpool.default.coreSize
+hystrix.threadpool.default.coreSize.value=hystrix.threadpool.default.coreSize
 hystrix.threadpool.default.maxQueueSize=hystrix.threadpool.default.maxQueueSize
 hystrix.threadpool.default.queueSizeRejectionThreshold=hystrix.threadpool.default.queueSizeRejectionThreshold
 hystrix.collapser.default.timerDelayInMilliseconds=hystrix.collapser.default.timerDelayInMilliseconds
@@ -27,3 +27,20 @@ hystrix.command.group.key.patient.v2.all=PatientGroupAllV2
 hystrix.command.group.key.patient.v2.orgId=PatientByOrgIdGroupV2
 hystrix.thread.pool.key.patient.v2=PatientThreadPoolV2
 
+#Thread pool properties
+hystrix.threadpool.default.coreSize=50
+execution.isolation.thread.timeoutInMilliseconds = 1000
+
+#Circuit breaker properties
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=45
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=5
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=50000
+#CB Defaults
+hystrix.command.default.circuitBreaker.forceOpen = false
+hystrix.command.default.circuitBreaker.forceClosed = false
+hystrix.command.default.circuitBreaker.enabled = true
+
+custom.sleep.order.domain.value= 500
+custom.sleep.patient.domain.value= 100
+custom.config.read.timeout=5000
+custom.config.connect.timeout=5000
